# image-annotation

./: .gitignore
src/: CMakeLists.txt  classifier.py  extracting_features.go  imglevel_results.go  kmeans_wrapper.cpp  kmeans_wrapper.h  label_conversion.go  main.cpp  mongo_helper_funcs.cpp  mongo_helper_funcs.h  mongodb_integration.go  predict.h  samples_output.go  script.js  segment_images.cpp  segment_images.h  surffeatures.cpp  surffeatures.h  testing.cpp
