project(src)
cmake_minimum_required(VERSION 2.8)
aux_source_directory(. SRC_LIST)
find_package( OpenCV REQUIRED )
find_package(Boost 1.54.0 COMPONENTS system)
include_directories( ${OpenCV_INCLUDE_DIRS} )
if(Boost_FOUND)
    include_directories(${Boost_INCLUDE_DIRS})
endif()
SET(CMAKE_EXE_LINKER_FLAGS, "-g")
SET(SOURCES main.cpp segment_images.cpp surffeatures.cpp mongo_helper_funcs.cpp segment_images.h surffeatures.h mongo_helper_funcs.h)
add_executable(main ${SOURCES})
target_link_libraries(main ${OpenCV_LIBS})
target_link_libraries(main ${Boost_LIBRARIES})
target_link_libraries(main "/usr/local/lib/libmongoclient.so")
